--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "^16.8.2",
+    "react-day-picker": "^7.2.4",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5"
   },
