--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "moment": "^2.24.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.2",
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.8.2",
